--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.3",
         "google/cloud-bigquery": "^1.24",
-        "illuminate/support": "^10.0",
-        "symfony/cache": "^6.0"
+        "illuminate/support": "^10.0|^11.0",
+        "symfony/cache": "^v7.2.1"
     },
     "require-dev": {
         "mockery/mockery": "^1.4.4",
